# sber-agents

./: .gitignore  README.md
assignments/01-llm-agents-basics/: README.md
assignments/01-llm-agents-basics/homework/: README.md
assignments/02-llm-api/: README.md
assignments/02-llm-api/homework/: README.md  tools-setup.md
assignments/02-llm-api/slides/: .env.example  01-slides.md  02-notebook-openai-api-basic.ipynb
assignments/02-llm-api/src/: bot.py
assignments/03-aidd/: .env.example  Makefile  report.md
assignments/03-aidd/bot/: pyproject.toml
assignments/03-aidd/bot/src/bot/: config.py  llm.py  main.py  memory.py
assignments/03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
assignments/04-multimodal/: .env.example  README.md  pyproject.toml  report.md
assignments/04-multimodal/docs/: idea.md  tasklist.md  vision.md
assignments/05-rag-langchain/: Makefile  README.md  pyproject.toml  report.md
assignments/06-monitoring-qa/: report.md
assignments/07-advanced-rag/: env.example  pyproject.toml  report.md
assignments/08-agents-langgraph/: README.md  env.example  pyproject.toml  report.md
assignments/09-mcp/: report.md
assignments/10-guard/: README.md  pyproject.toml  report.md
assignments/10-guard/mcp/mcp-http/: Makefile  README.md  pyproject.toml  server.py
assignments/10-guard/mcp/mcp-local-stdio/: README.md  pyproject.toml
assignments/10-guard/mcp/mcp-local-stdio/server/: main.py  sample_data.py
assignments/10-guard/mcp/mcp-local-stdio/server/data/: requests.xls
docs/: idea.md
(+43 files in other folders)
