[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikita Tarasov", email = "3734489@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "openai>=2.6.1",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
