[project]
name = "mcp-http-server"
version = "0.1.0"
description = "HTTP-based MCP Server for ticket database search via streamable-http transport"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.11.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

