[project]
name = "mcp-local-stdio"
version = "0.1.0"
description = "MCP Server for ticket database search with LangChain integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.11.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    # LangChain MCP Adapters dependencies
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
